--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "ethers": "^6.8.0",
+    "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-redux": "^8.1.3",
+    "web3": "^4.2.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@types/react": "18.2.33",
     "autoprefixer": "^10",
+    "hardhat": "^2.18.2",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
