--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "crypto": "^1.0.1",
     "ethers": "^6.8.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
